TestCases/Errors/arrays.cd
Int main()
{

    Int a[3] = {1,2,3,4,5};

}